--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
         <footer>
           <div>
             {% assign first_post = site.posts | last %}
-            &copy; {{ first_post.date | date: "%Y" }} ~ {{ site.time | date: "%Y" }} {{ site.author }} | powered by jekyll | themed by <a href="http://lhzhang.com" title="sext vi">sext vi</a>
+            &copy; {{ first_post.date | date: "%Y" }} ~ {{ site.time | date: "%Y" }} {{ site.author }} | powered by <a href="https://github.com/jekyll/jekyll">jekyll</a>
           </div>
         </footer>
       </div> <!-- main -->
