--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
         <footer>
           <div>
             {% assign first_post = site.posts | last %}
-            &copy; {{ date: "%Y" }} ~ {{ site.time | date: "%Y" }} {{ site.author }}
+            &copy; ~ {{ site.time | date: "%Y" }} {{ site.author }}
           </div>
         </footer>
       </div> <!-- main -->
